<resources>
    <string name="app_name">Food app</string>
    <string name="hello_explore_your_dream_food" />
    <string name="register" />
    <string name="my_restaurant_app" />
    <string name="hello_explore_your_dream_foot">hello_explore_your_dream_food</string>
    <string name="Register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="signin">signin</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="my_restaurant_app_app">My Restaurant App</string>
    <string name="registers">Register\n</string>
    <string name="already_registered">already_registered</string>
    <string name="email_address">email_address</string>
    <string name="full_name">full_name</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="email">email</string>
    <string name="forgot_password">Forgot password</string>
    <string name="cancel">Cancel</string>
    <string name="the_spicy_indian">The Spicy Indian</string>
    <string name="pending_order">Pending Order</string>
    <string name="complete_norder">Complete\norder</string>
    <string name="_30">30</string>
    <string name="_40">30</string>
    <string name="valid_users">Valid Users</string>
    <string name="_31">30</string>
    <string name="add_item">Add Item</string>
    <string name="item_id">Item ID</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="item_description">Item Description</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_image1">Upload Image</string>
    <string name="__30">30</string>
</resources>