<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Admin">

    <TextView
        android:id="@+id/textname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="56dp"
        android:fontFamily="@font/lobster_two_bold"
        android:text="@string/the_spicy_indian"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="238dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:outlineSpotShadowColor="@color/Green"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textname">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f4f4f4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="8dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="8dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="8dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="8dp" />

            <ImageView
                android:id="@+id/image1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_pending_actions_24"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/guideline1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lobster"
                android:text="pending\norder"
                android:textColor="@color/Green"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/image1" />

            <TextView
                android:id="@+id/textview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:text=" 30"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/textView3" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_done_all_24"
                app:layout_constraintEnd_toEndOf="@id/textView5"
                app:layout_constraintStart_toStartOf="@id/textView5"
                app:layout_constraintTop_toTopOf="@+id/guideline1" />


            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="8dp"
                android:text="@string/complete_norder"
                android:textAlignment="center"
                android:textColor="@color/Green"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/textView3"
                app:layout_constraintTop_toBottomOf="@id/imageView6" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/_40"
                android:textColor="#FFC107"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/textView5"
                app:layout_constraintStart_toStartOf="@id/textView5"
                app:layout_constraintTop_toBottomOf="@id/textView5" />

            <ImageView
                android:id="@+id/image4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_verified_user_24"
                app:layout_constraintEnd_toEndOf="@id/textView7"
                app:layout_constraintStart_toStartOf="@id/textView7"
                app:layout_constraintTop_toTopOf="@id/guideline1" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="All item\nlist"
                android:textColor="@color/Green"
                app:layout_constraintEnd_toStartOf="@id/guideline4"
                app:layout_constraintHorizontal_bias="0.578"
                app:layout_constraintStart_toEndOf="@id/textView5"
                app:layout_constraintTop_toBottomOf="@id/image4" />

            <TextView
                android:id="@+id/textview8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/_31"
                android:textColor="#4CAF50"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/textView7"
                app:layout_constraintStart_toStartOf="@id/textView7"
                app:layout_constraintTop_toBottomOf="@id/textView7" />


            <ImageView
                android:id="@+id/image5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@drawable/baseline_error_24"
                app:layout_constraintEnd_toEndOf="@id/textview9"
                app:layout_constraintHorizontal_bias="0.236"
                app:layout_constraintStart_toStartOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/textview1" />

            <TextView
                android:id="@+id/textview9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:text="Shortage item"
                android:textColor="@color/Green"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/image5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="52dp"
                android:text="30"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/textview9"
                app:layout_constraintTop_toBottomOf="@+id/textview9" />

            <ImageView
                android:id="@+id/image6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@drawable/baseline_delivery_dining_24"
                app:layout_constraintEnd_toEndOf="@id/textview10"
                app:layout_constraintStart_toStartOf="@id/textview10"
                app:layout_constraintTop_toBottomOf="@id/textView6" />

            <TextView
                android:id="@+id/textview10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="12dp"
                android:text="Delivery Boys"
                android:textAlignment="center"
                android:textColor="@color/Green"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/textview9"
                app:layout_constraintTop_toBottomOf="@id/image6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="28dp"
                android:text="30"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/textview10"
                app:layout_constraintTop_toBottomOf="@id/textview10" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="60dp"
        android:outlineSpotShadowColor="@color/Green"
        app:cardCornerRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card"
            android:onClick="menu">

            <ImageView
                android:id="@+id/image11"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/baseline_add_circle_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add Menu"
                android:textColor="@color/Green"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="@id/image11"
                app:layout_constraintStart_toStartOf="@id/image11"
                app:layout_constraintTop_toBottomOf="@id/image11"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:outlineSpotShadowColor="@color/Green"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card"
            android:onClick="manageitem">

            <ImageView
                android:id="@+id/image12"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/baseline_remove_red_eye_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="All Item Menu"
                android:fontFamily="@font/yeseva_one"
                android:textColor="@color/Green"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="@id/image12"
                app:layout_constraintStart_toStartOf="@id/image12"
                app:layout_constraintTop_toBottomOf="@id/image12"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:outlineSpotShadowColor="@color/Green"
        app:cardCornerRadius="15dp"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card"
            android:onClick="menu">

            <ImageView
                android:id="@+id/image13"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/baseline_add_circle_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Order Dispatch"
                android:textColor="@color/yellow"
                android:fontFamily="@font/yeseva_one"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="@id/image13"
                app:layout_constraintStart_toStartOf="@id/image13"
                app:layout_constraintTop_toBottomOf="@id/image13"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:outlineSpotShadowColor="@color/Green"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toEndOf="@+id/cardView3"
        app:layout_constraintTop_toTopOf="@+id/cardView3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card"
            android:onClick="menu">

            <ImageView
                android:id="@+id/image14"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/baseline_add_circle_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add Menu"
                android:textColor="@color/Green"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="@id/image14"
                app:layout_constraintStart_toStartOf="@id/image14"
                app:layout_constraintTop_toBottomOf="@id/image14"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>